# pydomdisco

./: Cargo.toml  MANIFEST.in  README.md  cortex.yaml  pyproject.toml
.github/workflows/: build.yml  deploy.yml
pydomdisco/: __init__.py  psl_tlds.pkl  pydomdisco.pyi  root_tld_to_nameservers_ips.pkl
scripts/: generate_psl_tlds.py  generate_root_tld_to_nameservers.py
src/: discovery.rs  lib.rs  zone_file_parser.rs
tests/: test_pydomdisco.py
