[package]
name = "pydomdisco"
version = "0.1.1"
authors = ["Gal Ben David <gal@intsights.com>"]
edition = "2018"
description = "A fast async domain discovery tool written in Rust"
readme = "README.md"
repository = "https://github.com/intsights/pydomdisco"
homepage = "https://github.com/intsights/pydomdisco"
license = "MIT"
keywords = [
    "domain",
    "discovery",
    "dns",
    "authoritative",
    "resolver",
    "rust",
    "async",
    "pyo3",
]

[package.metadata.maturin]
requires-python = ">=3.7"
classifier = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
]

[lib]
name = "pydomdisco"
crate-type = ["cdylib"]

[dependencies.pyo3]
version = "0.13.2"
features = ["extension-module"]

[dependencies]
tokio = { version = "1", features = ["rt", "sync"] }
trust-dns-resolver = "0.20"
trust-dns-client = "0.20"

[profile.release]
lto = true
panic = "abort"
