[project]
name = "pydomdisco"
version = "0.4.2"
description = "A fast async domain discovery tool written in Rust"
authors = [
  {email = "gal@intsights.com"},
  {name = "Gal Ben David"}
]
requires-python = ">=3.7"
license = {file = "LICENSE"}
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Operating System :: MacOS",
  "Operating System :: Microsoft",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Rust",
]

[build-system]
requires = ["maturin>=0.11,<0.12"]
build-backend = "maturin"

[tool.maturin]
sdist-include = [
    "src",
    "Cargo.toml",
    "pydomdisco",
]

[tool.poetry]
name = "pydomdisco"
version = "0.4.2"
authors = ["Gal Ben David <gal@intsights.com>"]
description = "A fast async domain discovery tool written in Rust"
readme = "README.md"
repository = "https://github.com/intsights/pydomdisco"
license = "MIT"
keywords = [
    "domain",
    "discovery",
    "dns",
    "authoritative",
    "resolver",
    "rust",
    "async",
    "pyo3",
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: Microsoft",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Rust",
]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "*"
wheel = "*"
pytest-runner = "*"
maturin = "*"
